--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,32 +5,33 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "Bun - Launch",
 			"type": "bun",
 			"internalConsoleOptions": "neverOpen",
 			"request": "launch",
-			"name": "Debug File",
 			"program": "${file}",
 			"cwd": "${workspaceFolder}",
 			"stopOnEntry": false,
 			"watchMode": false
 		},
 		{
+			"name": "Bun - Debug",
 			"type": "bun",
 			"internalConsoleOptions": "neverOpen",
 			"request": "launch",
-			"name": "Run File",
 			"program": "${file}",
 			"cwd": "${workspaceFolder}",
 			"noDebug": true,
 			"watchMode": false
 		},
 		{
-			"type": "bun",
-			"internalConsoleOptions": "neverOpen",
-			"request": "attach",
-			"name": "Attach Bun",
-			"url": "ws://localhost:6499/",
-			"stopOnEntry": false
+			"name": "C++ - Debug",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${fileDirname}/${fileBasenameNoExtension}.exe",
+			"cwd": "${fileDirname}",
+			"preLaunchTask": "C/C++: g++.exe build active file",
+			"stopAtEntry": false
 		}
 	]
 }
