--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,8 @@
 		"xtr1common": "cpp",
 		"xutility": "cpp",
 		"fstream": "cpp",
-		"string": "cpp"
+		"string": "cpp",
+		"sstream": "cpp",
+		"vector": "cpp"
 	}
 }
