--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Bun - Launch",
-			"type": "bun",
-			"internalConsoleOptions": "neverOpen",
-			"request": "launch",
-			"program": "${file}",
-			"cwd": "${workspaceFolder}",
-			"stopOnEntry": false,
-			"watchMode": false
-		},
-		{
-			"name": "Bun - Debug",
+			"name": "TypeScript",
 			"type": "bun",
 			"internalConsoleOptions": "neverOpen",
 			"request": "launch",
@@ -25,13 +15,20 @@
 			"watchMode": false
 		},
 		{
-			"name": "C++ - Debug",
+			"name": "C++",
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${fileDirname}/${fileBasenameNoExtension}.exe",
 			"cwd": "${fileDirname}",
 			"preLaunchTask": "C/C++: g++.exe build active file",
 			"stopAtEntry": false
+		},
+		{
+			"name": "Python",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "${file}",
+			"console": "integratedTerminal"
 		}
 	]
 }
