--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,8 @@
 			"type": "debugpy",
 			"request": "launch",
 			"program": "${file}",
-			"console": "integratedTerminal"
+			"console": "integratedTerminal",
+			"cwd": "${fileDirname}"
 		},
 		{
             "name": "C# (.NET Core)",
