--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,9 +40,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "Build C# Project",
-            "program": "${workspaceFolder}/src/day04/bin/Debug/net9.0/day04.exe",
+            "program": "${fileDirname}/bin/Debug/net9.0/${fileBasenameNoExtension}.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/day04",
+            "cwd": "${fileDirname}",
             "stopAtEntry": false,
             "console": "integratedTerminal"
         },
