--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,31 +30,45 @@
 		{
 			"name": "Python",
 			"type": "debugpy",
+			"internalConsoleOptions": "openOnSessionStart",
 			"request": "launch",
 			"program": "${file}",
-			"console": "integratedTerminal",
-			"cwd": "${fileDirname}"
+			"cwd": "${fileDirname}",
+			"console": "internalConsole"
 		},
 		{
             "name": "C# (.NET Core)",
             "type": "coreclr",
+			"internalConsoleOptions": "openOnSessionStart",
             "request": "launch",
             "preLaunchTask": "Build C# Project",
             "program": "${fileDirname}/bin/Debug/net9.0/${fileDirnameBasename}.dll",
             "args": [],
             "cwd": "${fileDirname}",
             "stopAtEntry": false,
-            "console": "integratedTerminal"
+			"console": "internalConsole",
         },
 		{
+			"name": "Java",
 			"type": "java",
-			"name": "Run Java",
+			"internalConsoleOptions": "openOnSessionStart",
 			"request": "launch",
 			"mainClass": "${fileBasenameNoExtension}",
 			"cwd": "${workspaceFolder}",
-			"console": "integratedTerminal",
 			"preLaunchTask": "Compile Java",
-			"args": []
-		  }
+			"args": [],
+			"console": "internalConsole"
+		},
+		{
+            "name": "Go: Launch Current File",
+            "type": "go",
+			"internalConsoleOptions": "openOnSessionStart",
+            "request": "launch",
+            "program": "${file}",
+            "env": {},
+            "args": [],
+			"cwd": "${fileDirname}",
+			"console": "internalConsole"
+        }
 	]
 }
