--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,17 +37,17 @@
 			"console": "internalConsole"
 		},
 		{
-            "name": "C# (.NET Core)",
-            "type": "coreclr",
+			"name": "C# (.NET Core)",
+			"type": "coreclr",
 			"internalConsoleOptions": "openOnSessionStart",
-            "request": "launch",
-            "preLaunchTask": "Build C# Project",
-            "program": "${fileDirname}/bin/Debug/net9.0/${fileDirnameBasename}.dll",
-            "args": [],
-            "cwd": "${fileDirname}",
-            "stopAtEntry": false,
+			"request": "launch",
+			"preLaunchTask": "Build C# Project",
+			"program": "${fileDirname}/bin/Debug/net9.0/${fileDirnameBasename}.dll",
+			"args": [],
+			"cwd": "${fileDirname}",
+			"stopAtEntry": false,
 			"console": "internalConsole",
-        },
+		},
 		{
 			"name": "Java",
 			"type": "java",
@@ -60,15 +60,36 @@
 			"console": "internalConsole"
 		},
 		{
-            "name": "Go: Launch Current File",
-            "type": "go",
+			"name": "Go: Launch Current File",
+			"type": "go",
 			"internalConsoleOptions": "openOnSessionStart",
-            "request": "launch",
-            "program": "${file}",
-            "env": {},
-            "args": [],
+			"request": "launch",
+			"program": "${file}",
+			"env": {},
+			"args": [],
 			"cwd": "${fileDirname}",
 			"console": "internalConsole"
-        }
+		},
+		{
+			"name": "COBOL: Debug",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${fileDirname}/${fileBasenameNoExtension}.out",
+			"preLaunchTask": "Build COBOL",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": true,
+			"MIMode": "gdb",
+			"miDebuggerPath": "/usr/bin/gdb", // Adjust this if GDB is in a different location
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				}
+			]
+		}
 	]
 }
