Added Cobol extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
         "vscode": {
             "extensions": [
 				"dbaeumer.vscode-eslint",
+				"bitlang.cobol",
 				"golang.go",
 				"mhutchie.git-graph",
 				"ms-azuretools.vscode-docker",
