--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -80,7 +80,7 @@
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
-			"externalConsole": true,
+			"externalConsole": false,
 			"MIMode": "gdb",
 			"miDebuggerPath": "/usr/bin/gdb", // Adjust this if GDB is in a different location
 			"setupCommands": [
