--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -90,6 +90,12 @@
 					"ignoreFailures": true
 				}
 			]
-		}
+		},
+		{
+            "name": "R: Debug file",
+            "type": "R-Debugger",
+            "request": "launch",
+            "file": "${file}"
+        }
 	]
 }
