--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,7 @@
     "build": {
         "dockerfile": "Dockerfile",
         "args": {
-            "BUN_VERSION": "1.1.26",
-			"NODE_VERSION": "20.17.0"
+            "BUN_VERSION": "1.1.26"
         }
     },
 	"runArgs": [
@@ -35,6 +34,8 @@
 				"oracle.oracle-java",
 				"oven.bun-vscode",
 				"pandy.bun",
+				"rdebugger.r-debugger",
+				"reditorsupport.r",
 				"riccardonovaglia.missinglineendoffile",
 				"s-vscode-remote.remote-containers",
 				"tamasfe.even-better-toml",
