--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,6 @@
         "vscode": {
             "extensions": [
 				"dbaeumer.vscode-eslint",
-				"bitlang.cobol",
 				"golang.go",
 				"mhutchie.git-graph",
 				"ms-azuretools.vscode-docker",
@@ -37,6 +36,7 @@
 				"rdebugger.r-debugger",
 				"reditorsupport.r",
 				"riccardonovaglia.missinglineendoffile",
+				"rocketsoftware.rocket-cobol",
 				"s-vscode-remote.remote-containers",
 				"tamasfe.even-better-toml",
 				"vscjava.vscode-java-pack",
