--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -74,6 +74,13 @@
             "request": "launch",
             "file": "${file}",
 			"workingDirectory": "${fileDirname}"
-        }
+        },
+		{
+			"type": "perl",
+			"request": "launch",
+			"name": "Perl-Debug",
+			"program": "${file}",
+			"cwd": "${fileDirname}"
+		},
 	]
 }
