--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,6 +36,7 @@
 				"rdebugger.r-debugger",
 				"reditorsupport.r",
 				"riccardonovaglia.missinglineendoffile",
+				"richterger.perl",
 				"rocketsoftware.rocket-cobol",
 				"s-vscode-remote.remote-containers",
 				"tamasfe.even-better-toml",
