--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -76,6 +76,23 @@
 			"options": {
 				"cwd": "${fileDirname}"
 			}
+		  },
+		  {
+			"label": "cargo build",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+			  "build"
+			],
+			"group": {
+			  "kind": "build",
+			  "isDefault": true
+			},
+			"problemMatcher": ["$rustc"],
+			"detail": "Generated task to build Rust project",
+			"options": {
+				"cwd": "${fileDirname}/.."
+			}
 		  }
 	],
 	"version": "2.0.0"
