--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -93,6 +93,34 @@
 			"cwd": "${fileDirname}/..",
 			"preLaunchTask": "cargo build",
 			"internalConsoleOptions": "openOnFirstSessionStart"
+		},
+		{
+			"name": "Debug Fortran",
+			"type": "cppdbg",
+			"request": "launch",
+			"internalConsoleOptions": "openOnFirstSessionStart",
+			"program": "${fileDirname}/${fileBasenameNoExtension}.out",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+			  {
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+			  }
+			],
+			"miDebuggerPath": "/usr/bin/gdb",
+			"preLaunchTask": "Build Fortran",
+			"miDebuggerArgs": "",
+			"logging": {
+			  "moduleLoad": false,
+			  "trace": false,
+			  "engineLogging": false
+			}
 		  }
 	]
 }
