--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,31 +20,32 @@
     "customizations": {
         "vscode": {
             "extensions": [
-				"dbaeumer.vscode-eslint",
-				"fortran-lang.linter-gfortran",
-				"golang.go",
-				"mhutchie.git-graph",
-				"ms-azuretools.vscode-docker",
-				"ms-dotnettools.csdevkit",
-				"ms-dotnettools.vscode-dotnet-pack",
-				"ms-python.debugpy",
-				"ms-python.python",
-				"ms-vscode.cpptools-extension-pack",
-				"mylesmurphy.prettify-ts",
-				"oracle.oracle-java",
-				"oven.bun-vscode",
-				"pandy.bun",
-				"rdebugger.r-debugger",
-				"reditorsupport.r",
-				"riccardonovaglia.missinglineendoffile",
-				"richterger.perl",
-				"rocketsoftware.rocket-cobol",
-				"rust-lang.rust-analyzer",
-				"s-vscode-remote.remote-containers",
-				"tamasfe.even-better-toml",
-				"vadimcn.vscode-lldb",
-				"vscjava.vscode-java-pack",
-				"yoavbls.pretty-ts-errors"
+                "dbaeumer.vscode-eslint",
+                "fortran-lang.linter-gfortran",
+                "golang.go",
+                "mhutchie.git-graph",
+                "ms-azuretools.vscode-docker",
+                "ms-dotnettools.csdevkit",
+                "ms-dotnettools.vscode-dotnet-pack",
+                "ms-python.debugpy",
+                "ms-python.python",
+                "ms-vscode.cpptools-extension-pack",
+                "mylesmurphy.prettify-ts",
+                "oracle.oracle-java",
+                "oven.bun-vscode",
+                "pandy.bun",
+                "rdebugger.r-debugger",
+                "reditorsupport.r",
+                "riccardonovaglia.missinglineendoffile",
+                "richterger.perl",
+                "rocketsoftware.rocket-cobol",
+                "rust-lang.rust-analyzer",
+                "s-vscode-remote.remote-containers",
+                "tamasfe.even-better-toml",
+                "vadimcn.vscode-lldb",
+                "vscjava.vscode-java-pack",
+                "yoavbls.pretty-ts-errors",
+                "rebornix.Ruby"
             ]
         }
     }
