Getting sides fine, works on sample, not on real data

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -105,7 +105,7 @@ RUN pip3 install --force fortls findent
 # Ruby
 RUN DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
     ruby-full
-RUN gem install debug ruby-debug-ide
+RUN gem install debug ruby-debug-ide text-table
 
 # Cleanup
 RUN apt auto-remove -y && apt clean -y;
