launch.json uses folder, not file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
 		{
 			"name": "TS/JS",
 			"type": "bun",
-			"internalConsoleOptions": "neverOpen",
+			"internalConsoleOptions": "openOnSessionStart",
 			"request": "launch",
-			"program": "${file}",
+			"program": "${fileDirname}/index.ts",
 			"cwd": "${workspaceFolder}",
 		},
 		{
